# grove

./: .release-please-manifest.json  Cargo.toml  Dockerfile  README.md  fly.toml  release-please-config.json
.github/workflows/: _build.yml  _pr-title.yml  _release.yml  _test.yml  ci.yml  release-build.yml
crates/grove/: CHANGELOG.md  Cargo.toml
crates/grove/src/: config.rs  error.rs  main.rs  vcs.rs
crates/grove/src/mise_plugin/: metadata.lua  mise_env.lua
crates/grove/tests/: cli.rs
site/: Caddyfile  index.html  install.sh
