[package]
name = "grove"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Manage a grove of git repositories with per-project environment variables and centralized worktree management"

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true
